# terrapod

./: .gitignore  .gitleaks.toml  .semgrepignore  AGENTS.md  ANNOUNCEMENT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  Tiltfile  llms.txt  mkdocs.yml
services/: pyproject-listener.toml  pyproject-migrations.toml  pyproject-runner.toml  pyproject.toml
services/ai_eval/: __init__.py  __main__.py  cases.py  generator.py  judge.py  prep.py  report.py  rubric.py  runner.py
services/terrapod/: config.py  gpg_verify.py  http_retry.py  logging_config.py
services/terrapod/api/: app.py  contract.py  dependencies.py  deprecation.py  health.py  labels.py  metrics.py  rate_limit.py  serialization.py  upload_stream.py
services/terrapod/auth/: api_tokens.py  auth_state.py  ca.py  capabilities.py  download_tickets.py  passwords.py  pkce.py  recent_users.py  runner_tokens.py  sessions.py  sso.py  token_signing.py
services/terrapod/cli/: backup.py  bootstrap.py  encryption_doctor.py  encryption_migrate.py  preflight.py  restore_verify.py
services/terrapod/crypto/: __init__.py  columns.py  envelope.py  providers.py  service.py  state.py  types.py
services/terrapod/db/: iam_auth.py  models.py  schema_version.py  session.py
services/terrapod/redis/: client.py  iam_auth.py
services/terrapod/runner/: download.py  exec_subprocess.py  identity.py  job_entrypoint.py  job_manager.py  job_template.py  listener.py  lock_extender.py  plan_artifacts.py  runner_config.py  upload_cli.py
services/terrapod/services/: agent_pool_service.py  archive_utils.py  artifact_retention_service.py  artifact_verification.py  audit_service.py  autodiscovery_lifecycle_service.py  binary_cache_service.py  cache_errors.py  cache_warm_service.py  capability_resolver.py  catalog_rbac_service.py  catalog_service.py  cv_diff_service.py  drift_detection_service.py  drift_ignore_classifier.py  estate_graph_service.py  execution_hook_service.py  git_fetch.py  github_service.py  gitlab_service.py  gpg_key_service.py  hashing_stream.py  label_validation.py  labels_service.py  lifecycle_destroy_retry.py  module_hcl_parser.py  module_impact_service.py  notification_dispatcher.py  notification_service.py  plan_graph_service.py  plan_summary.py  platform_provider_service.py  policy_engine.py  policy_set_service.py  policy_vcs_poller.py  pool_rbac_service.py  provider_cache_service.py  registry_module_service.py  registry_provider_service.py  registry_rbac_service.py  (+28 more)
services/terrapod/storage/: __init__.py  azure.py  filesystem.py  filesystem_routes.py  gcs.py  keys.py  protocol.py  s3.py
services/tests/: conftest.py  test_api_sdk_contract.py  test_db_iam_auth.py  test_dependency_pins.py  test_gpg_verify.py  test_http_retry.py  test_logging_config.py  test_redis_iam_auth.py  test_schema_version.py
services/tests/ai_eval/: test_offline.py
services/tests/api/: api_attribute_contract.json  api_route_contract.json  api_wire_contract.json  test_agent_pools.py  test_agent_pools_validators.py  test_ai_summary.py  test_api_namespace.py  test_attribute_contract.py  test_audit.py  test_auth_dependency.py  test_auth_pkce.py  test_autodiscovery_rules.py  test_binary_cache.py  test_catalog.py  test_config_versions_catalog_guard.py  test_deprecation.py  test_drift_detection.py  test_encryption.py  test_execution_hooks.py  test_gpg_keys.py  test_health.py  test_health_conditions.py  test_labels_router.py  test_labels_wrapper.py  test_module_impact.py  test_notification_configurations.py  test_oauth.py  test_policy_runner_endpoints.py  test_policy_sets_vcs.py  test_provider_mirror.py  test_rate_limit.py  test_registry_module_interface.py  test_remote_state_consumers.py  test_request_base_url.py  test_roles.py  test_route_contract.py  test_run_artifacts.py  test_run_tasks.py  test_run_triggers.py  test_runs.py  (+15 more)
services/tests/auth/: test_api_tokens.py  test_auth_state.py  test_ca.py  test_capabilities.py  test_download_tickets.py  test_oidc.py  test_passwords.py  test_pkce.py  test_role_assignments.py  test_runner_tokens.py  test_sessions.py  test_sso.py  test_token_signing.py
services/tests/config/: config_key_contract.json  test_config_contract.py
services/tests/crypto/: test_crypto.py  test_encryption_doctor.py
services/tests/db/: migration_contractions.json  test_migration_contract.py
services/tests/helm/: helm_values_contract.json  test_values_contract.py
services/tests/integration/: conftest.py  test_bootstrap_seed_integration.py  test_catalog_lifecycle_integration.py  test_lifecycle_destroy_retry_integration.py  test_provider_publish.py  test_rbac_enforcement.py  test_run_execution.py  test_run_state_machine.py  test_run_task_stage_idempotency.py  test_variables.py  test_workspace_state_lifecycle.py
services/tests/runner/: test_backend_override.py  test_binary_verify.py  test_config_strip.py  test_download.py  test_exec_subprocess.py  test_identity.py  test_job_entrypoint.py  test_job_manager.py  test_job_template.py  test_listener_admission.py  test_listener_retry.py  test_lock_extender.py  test_phase_backend_backstop.py  test_phase_binary.py  test_phase_configuration.py  test_phase_execution_hooks.py  test_phase_init.py  test_phase_log_capture.py  test_phase_mirror_config.py  test_phase_opa.py  test_phase_plan_apply.py  test_phase_resource_profile.py  test_phase_setup_script.py  test_phase_state.py  test_phase_terragrunt.py  test_phase_tf_args.py  test_phase_tfvars.py  test_phase_uploads.py  test_phase_working_dir.py  test_plan_artifacts.py  test_policy_eval.py  test_proxy_ca_trust_env.py  test_runner_config.py  test_runner_proxy_ca_config.py
services/tests/services/: test_agent_pool_service.py  test_artifact_retention_service.py  test_artifact_verification.py  test_audit_service.py  test_autodiscovery_lifecycle_service.py  test_backup.py  test_binary_cache_service.py  test_cache_warm_service.py  test_capability_resolver.py  test_catalog_rbac_service.py  test_catalog_service.py  test_cv_diff_service.py  test_drift_detection_service.py  test_drift_ignore_classifier.py  test_estate_graph_service.py  (+53 more)
(+676 files in other folders)
