[tool.poetry]
name = "terrapod"
version = "0.1.0"
description = "Terrapod - Open-source Terraform Enterprise replacement - API Server"
authors = ["Matt Robinson"]
license = "GPL-3.0-or-later"
packages = [{include = "terrapod"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = ">=0.135.2,<0.137.0"
uvicorn = {extras = ["standard"], version = ">=0.42,<0.45"}
pydantic = "^2.10.0"
pydantic-settings = "^2.13.1"
structlog = "^25.5.0"
httpx = "^0.28.0"
pyyaml = "^6.0.0"
aiofiles = "^25.1.0"
# AWS S3
aioboto3 = "^15.5.0"
# Azure Blob Storage
azure-storage-blob = "^12.25.0"
azure-identity = "^1.21.0"
# GCP Cloud Storage
google-cloud-storage = "^3.9.0"
gcloud-aio-storage = "^9.6.4"
# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.31.0"
alembic = "^1.14.0"
# Redis
redis = "^7.4.0"
# Auth
authlib = "^1.4.0"
python3-saml = "^1.16.0"
cryptography = "^46.0.5"
zxcvbn = "^4.4.28"
python-multipart = "^0.0.26"
# Kubernetes (runner listener)
kubernetes = "^35.0.0"
# GPG key parsing for provider registry
pgpy = "^0.6.0"
# GitHub App JWT signing for VCS integration
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
# Async SMTP for email notifications
aiosmtplib = "^5.1.0"
# SSE (Server-Sent Events) for real-time run status updates
sse-starlette = "^3.3.2"
# Prometheus metrics exposition
prometheus-client = ">=0.24,<0.26"
# imghdr removed in Python 3.13; pgpy still imports it
standard-imghdr = "^3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
ruff = "^0.15.0"
mypy = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # Depends() in function defaults is idiomatic FastAPI
]

[tool.ruff.lint.isort]
known-first-party = ["terrapod"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: Integration tests using real Postgres, Redis, and filesystem storage",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "aioboto3",
    "aiobotocore.*",
    "azure.*",
    "google.*",
    "gcloud.*",
    "aiofiles",
    "redis.*",
    "authlib.*",
    "onelogin.*",
    "zxcvbn",
    "asyncpg",
    "kubernetes.*",
    "pgpy.*",
    "aiosmtplib",
]
ignore_missing_imports = true
