[tool.poetry]
name = "terrapod"
version = "0.1.0"
description = "Terrapod - Open-source Terraform Enterprise replacement - API Server"
authors = ["Matt Robinson"]
license = "GPL-3.0-or-later"
packages = [{include = "terrapod"}]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
fastapi = ">=0.135.2,!=0.136.3,<0.137.0"
uvicorn = {extras = ["standard"], version = ">=0.42,<0.50"}
pydantic = "^2.10.0"
pydantic-settings = "^2.13.1"
structlog = ">=25.5,<27.0"
httpx = "^0.28.0"
pyyaml = "^6.0.0"
aiofiles = "^25.1.0"
# AWS S3
aioboto3 = "^15.5.0"
# Azure Blob Storage
azure-storage-blob = "^12.25.0"
azure-identity = "^1.21.0"
# GCP Cloud Storage
google-cloud-storage = "^3.9.0"
gcloud-aio-storage = "^9.6.4"
# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.31.0"
alembic = "^1.14.0"
# HCL parsing (module interface extraction)
python-hcl2 = "^7.0.0"
# Redis
redis = ">=7.4,<9.0"
# Auth
authlib = "^1.4.0"
python3-saml = "^1.16.0"
cryptography = ">=46.0.5,<49.0.0"
zxcvbn = "^4.4.28"
python-multipart = ">=0.0.26,<0.0.33"
# Kubernetes (runner listener)
kubernetes = ">=35,<37"
# GPG key parsing for provider registry
pgpy = "^0.6.0"
# GitHub App JWT signing for VCS integration
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
# Async SMTP for email notifications
aiosmtplib = "^5.1.0"
# SSE (Server-Sent Events) for real-time run status updates
sse-starlette = "^3.3.2"
# Prometheus metrics exposition
prometheus-client = ">=0.24,<0.26"
# imghdr removed in Python 3.13; pgpy still imports it
standard-imghdr = "^3.13"
# LiteLLM SDK for the AI plan-summary feature (#401). One library, every
# major provider — Bedrock (native Converse + IAM auth via boto3),
# OpenAI, Anthropic direct, Gemini, Azure OpenAI, vLLM, etc. Terrapod
# speaks OpenAI Chat Completions request shape to LiteLLM; LiteLLM
# handles per-provider request translation and auth in-process.
#
# Upper bound <2.0 is the standard major-version cap. Lower bound
# 1.87 patches the proxy-mode CVEs (CVE-2026-40217, CVE-2026-42203,
# CVE-2026-42208, CVE-2026-42271) — all proxy-only, not reachable from
# how Terrapod uses litellm (library-only via acompletion(), proxy
# never started) — and relaxes the aiohttp pin from ==3.13.5 to
# <4.0,>=3.10, which lets aiohttp resolve to 3.14+ and clears
# GHSA-hg6j-4rv6-33pg + GHSA-jg22-mg44-37j8 + CVE-2026-34993 +
# CVE-2026-47265. Reachable only on Python 3.13 — litellm 1.83.11+
# requires_python = <3.14. The 3.13 floor stays until litellm
# restores 3.14 compatibility.
litellm = ">=1.87,<2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
# Parallel test runner. CI Python Test shards (unit, services-api)
# use `-n auto` to spread across runner vCPUs; integration shard
# stays serial because its session-scoped Postgres fixture would
# race under workers. Local `make test` doesn't enable it by
# default — `pytest` itself in the test container still runs
# serial unless `-n` is passed.
pytest-xdist = "^3.6.0"
ruff = "^0.15.0"
mypy = ">=1.14,<3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # Depends() in function defaults is idiomatic FastAPI
]

[tool.ruff.lint.isort]
known-first-party = ["terrapod"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: Integration tests using real Postgres, Redis, and filesystem storage",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "aioboto3",
    "aiobotocore.*",
    "azure.*",
    "google.*",
    "gcloud.*",
    "aiofiles",
    "redis.*",
    "authlib.*",
    "onelogin.*",
    "zxcvbn",
    "asyncpg",
    "kubernetes.*",
    "pgpy.*",
    "aiosmtplib",
]
ignore_missing_imports = true
